--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.17",
     "prisma": "^3.9.2",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "3.9.2",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0"
