--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.17",
     "prisma": "^3.9.2",
     "ts-node": "^10.5.0",
@@ -18,6 +19,8 @@
     "@prisma/client": "3.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "google-auth-library": "^7.14.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0"
   },
